--- a/gxj.plist
+++ b/gxj.plist
@@ -1,49 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
  	        <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
  	<plist version="1.0">
- 	<dict>
- 	<key>items</key>
- 	<array>
- 	<dict>
- 	<key>assets</key>
- 	<array>
- 	<dict>
- 	<key>kind</key>
- 	<string>software-package</string>
- 	<key>url</key>
- 	<string>***</string>
- 	</dict>
- 	<dict>
- 	<key>kind</key>
- 	<string>full-size-image</string>
- 	<key>needs-shine</key>
- 	<true/>
- 	<key>url</key>
- 	<string></string>
- 	</dict>
- 	<dict>
- 	<key>kind</key>
- 	<string>display-image</string>
- 	<key>needs-shine</key>
- 	<true/>
- 	<key>url</key>
- 	<string></string>
- 	</dict>
- 	</array>
- 	<key>metadata</key>
- 	<dict>
- 	<key>bundle-identifier</key>
- 	<string>****</string>
- 	<key>bundle-version</key>
- 	<string>****</string>
- 	<key>kind</key>
- 	<string>software</string>
- 	<key>subtitle</key>
- 	<string>*****</string>
- 	<key>title</key>
- 	<string>****</string>
- 	</dict>
- 	</dict>
- 	</array>
- 	</dict>
+<dict>
+    <key>items</key>
+    <array>
+        <dict>
+            <key>assets</key>
+            <array>
+                <dict>
+                    <key>kind</key>
+                    <string>software-package</string>
+                    <key>url</key>
+                    <string>
+http://39.96.188.125:8085/办公系统.ipa
+                    </string>
+                </dict>
+            </array>
+            <key>metadata</key>
+            <dict>
+                <key>bundle-identifier</key>
+                <string>com.gxjoa.office</string>
+                <key>bundle-version</key>
+                <string>2.0.19</string>
+                <key>kind</key>
+                <string>software</string>
+                <key>title</key>
+                <string>办公系统</string>
+            </dict>
+        </dict>
+    </array>
+</dict>
  	</plist>
