--- a/gxj.plist
+++ b/gxj.plist
@@ -1,33 +1,107 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0">
-<dict>
-    <key>items</key>
+<!--?xml version='1.0' encoding='UTF-8'?--><!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<html>
+ <head></head>
+ <body>
+  <plist version="1.0">
+   <dict>
+    <key>
+     items
+    </key>
     <array>
-        <dict>
-            <key>assets</key>
-            <array>
-                <dict>
-                    <key>kind</key>
-                    <string>software-package</string>
-                    <key>url</key>
-                    <string>
-http://39.96.188.125:8085/办公系统.ipa
-                    </string>
-                </dict>
-            </array>
-            <key>metadata</key>
-            <dict>
-                <key>bundle-identifier</key>
-                <string>com.gxjoa.office</string>
-                <key>bundle-version</key>
-                <string>2.0.19</string>
-                <key>kind</key>
-                <string>software</string>
-                <key>title</key>
-                <string>办公系统</string>
-            </dict>
-        </dict>
+     <dict>
+      <key>
+       assets
+      </key>
+      <array>
+       <dict>
+        <key>
+         kind
+        </key>
+        <string>
+         software-package
+        </string>
+        <key>
+         url
+        </key>
+        <string>
+         http://39.96.188.125:8085/办公系统.ipa
+        </string>
+       </dict>
+       <dict>
+        <key>
+         kind
+        </key>
+        <string>
+         display-image
+        </string>
+        <key>
+         needs-shine
+        </key>
+        <true />
+        <key>
+         url
+        </key>
+        <string>
+         http://www.apicloud.com/icon1/b2/4b/b24b4fd0d0c8f035d4d222b8d211edfe.57x57.png
+        </string>
+       </dict>
+       <dict>
+        <key>
+         kind
+        </key>
+        <string>
+         full-size-image
+        </string>
+        <key>
+         needs-shine
+        </key>
+        <true />
+        <key>
+         url
+        </key>
+        <string>
+         http://www.apicloud.com/icon1/b2/4b/b24b4fd0d0c8f035d4d222b8d211edfe.57x57.png
+        </string>
+       </dict>
+      </array>
+      <key>
+       metadata
+      </key>
+      <dict>
+       <key>
+        bundle-identifier
+       </key>
+       <string>
+        com.gxjoa.office
+       </string>
+       <key>
+        bundle-version
+       </key>
+       <string>
+        0.0.1
+       </string>
+       <key>
+        kind
+       </key>
+       <string>
+        software
+       </string>
+       <key>
+        subtitle
+       </key>
+       <string>
+        办公系统
+       </string>
+       <key>
+        title
+       </key>
+       <string>
+        办公系统
+       </string>
+      </dict>
+     </dict>
     </array>
-</dict>
-</plist>
+   </dict>
+  </plist>
+ </body>
+</html>
