--- a/gxj.plist
+++ b/gxj.plist
@@ -10,7 +10,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://39.96.188.125:8085/办公系统.ipa</string>
+                    <string>http://39.96.188.125:8085/bg.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
