--- a/gxj.plist
+++ b/gxj.plist
@@ -10,7 +10,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>http://39.96.188.125:8085/bgxt.ipa</string>
+                    <string>https://ali-fir-pro-binary.fir.im/f28ae4757b2e5659454152bda9a0b476553629ee?auth_key=1576199684-0-0-5b53cc7e83479c2bcf1d24769fd88631</string>
                 </dict>
             </array>
             <key>metadata</key>
