--- a/gxj.plist
+++ b/gxj.plist
@@ -1,30 +1,50 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+
 <plist version="1.0">
-<dict>
+  <dict>
     <key>items</key>
     <array>
+      <dict>
+        <key>assets</key>
+        <array>
+          <dict>
+            <key>kind</key>
+            <string>software-package</string>
+            <key>url</key>
+            <string>http://39.96.188.125:8085/20191213.ipa</string>
+          </dict>
+          <dict>
+            <key>kind</key>
+            <string>display-image</string>
+            <key>needs-shine</key>
+            <true/>
+            <key>url</key>
+            <string>http://www.apicloud.com/icon1/b2/4b/b24b4fd0d0c8f035d4d222b8d211edfe.57x57.png</string>
+          </dict>
+          <dict>
+            <key>kind</key>
+            <string>full-size-image</string>
+            <key>needs-shine</key>
+            <true/>
+            <key>url</key>
+            <string>http://www.apicloud.com/icon1/b2/4b/b24b4fd0d0c8f035d4d222b8d211edfe.57x57.png</string>
+          </dict>
+        </array>
+        <key>metadata</key>
         <dict>
-            <key>assets</key>
-            <array>
-                <dict>
-                    <key>kind</key>
-                    <string>software-package</string>
-                    <key>url</key>
-                    <string>https://ali-fir-pro-binary.fir.im/f28ae4757b2e5659454152bda9a0b476553629ee?auth_key=1576199684-0-0-5b53cc7e83479c2bcf1d24769fd88631</string>
-                </dict>
-            </array>
-            <key>metadata</key>
-            <dict>
-                <key>bundle-identifier</key>
-                <string>com.gxjoa.office</string>
-                <key>bundle-version</key>
-                <string>2.0.19</string>
-                <key>kind</key>
-                <string>software</string>
-                <key>title</key>
-                <string>办公系统</string>
-            </dict>
+          <key>bundle-identifier</key>
+          <string>com.gxjoa.office</string>
+          <key>bundle-version</key>
+          <string>2.0.22</string>
+          <key>kind</key>
+          <string>software</string>
+          <key>subtitle</key>
+          <string>办公系统</string>
+          <key>title</key>
+          <string>办公系统</string>
         </dict>
+      </dict>
     </array>
-</dict>
+  </dict>
 </plist>
